--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,13 @@ body{
     /* background-color: #ABC4AA; */
     /* background-color: #94A684; */
     /* background-color: #FEFFAC; */
-    background: radial-gradient(circle, rgba(136,219,220,1) 18%, rgba(2,0,36,1) 86%, rgba(17,45,50,1) 94%);
+    /* background: radial-gradient(circle, rgba(136,219,220,1) 18%, rgba(2,0,36,1) 86%, rgba(17,45,50,1) 94%); */
+
+    background: #F09819;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #EDDE5D, #F09819);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #EDDE5D, #F09819); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #88dbdc;
+    height: 100px;
   
 }
 h1{
@@ -28,7 +33,7 @@ h2{
 .navbar{
   padding-top: 5px;
   padding-bottom: 5px;
-  color: #88dbdc;
+  color: #63c9ff;
     
 }
 .navbar-brand{
@@ -83,8 +88,11 @@ h2{
     padding-right: 150px;
     padding-left: 150px;
     
-
-    background: radial-gradient(circle, rgba(136,219,220,1) 18%, rgba(2,0,36,1) 86%, rgba(17,45,50,1) 94%);
+    background: #F09819;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #EDDE5D, #F09819);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #EDDE5D, #F09819); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    /* background: radial-gradient(circle, rgba(136,219,220,1) 18%, rgba(2,0,36,1) 86%, rgba(17,45,50,1) 94%); */
 }
 
 #services{
@@ -98,7 +106,7 @@ h2{
 
 .divide{
     background-color: black;
-    height: 40px;
+    height: 15px;
 
 }
 
@@ -110,12 +118,15 @@ h2{
     padding: 50px;
 
     /* background-color: #254e58; */
-    color: #88dbdc;
+    color: #EDDE5D;
     font-weight: bold;
     font-style: oblique;
 
     background: rgb(2,0,36);
-    background: radial-gradient(circle, rgba(2,0,36,1) 72%, rgba(136,219,220,1) 100%, rgba(17,45,50,1) 100%);
+    /* background: radial-gradient(circle, rgba(2,0,36,1) 72%, rgba(136,219,220,1) 100%, rgba(17,45,50,1) 100%); */
+
+    background-image: linear-gradient( 109.6deg,  rgba(6,2,2,1) 32.4%, rgba(137,30,47,1) 98.8% );
+
 }
 
 /* FOOTER */
